test_results_defects/infer_test/func_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:34: error: Dead Store
  The value written to &a (type int) is never used.
  32. {
  33. 	int a ;
  34. 	a =10;
       ^
  35. }
  36. 

#1
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:42: error: Dead Store
  The value written to &ret (type int) is never used.
  40. 	int ret;
  41. 	func = (int (*)( ))func_pointer_001_func_001;
  42. 	ret = func();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
       ^
  43. }
  44. 

#2
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:81: error: Dead Store
  The value written to &ret (type float) is never used.
  79. 		float (*func)(long , int);
  80. 		func = (float (*)(long , int ))func_pointer_003_func_001;
  81. 		ret = func(1, 2);/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
        ^
  82. 	}
  83. }

#3
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:101: error: Null Dereference
  pointer `str_rev` last assigned on line 98 could be null and is dereferenced at line 101, column 13.
   99.         for (j = 0; j < i; j++)
  100.         {
  101.             str_rev[j] = str1[i-j-1];
                   ^
  102.         }
  103.         str_rev[i] = '\0';

#4
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:103: error: Null Dereference
  pointer `str_rev` last assigned on line 98 could be null and is dereferenced at line 103, column 9.
  101.             str_rev[j] = str1[i-j-1];
  102.         }
  103.         str_rev[i] = '\0';
               ^
  104.         return str_rev;
  105.     }

#5
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:123: error: Dead Store
  The value written to &str (type char) is never used.
  121.             int (*fptr)(char *);
  122.             fptr = (int (*)( char *))func_pointer_004_func_001;
  123.             str = fptr(buf[j]);/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
                   ^
  124.         }
  125.     }

#6
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:151: error: Null Dereference
  pointer `doubleptr` last assigned on line 147 could be null and is dereferenced at line 151, column 3.
  149. 	for(i=0;i<10;i++)
  150. 	{
  151. 		doubleptr[i]=(long*) malloc(10*sizeof(long));
         ^
  152. 	}
  153. 	for(i=0;i<10;i++)

#7
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:210: error: Null Dereference
  pointer `doubleptr` last assigned on line 206 could be null and is dereferenced at line 210, column 3.
  208. 	for(i=0;i<10;i++)
  209. 	{
  210. 		doubleptr[i]=(float *) malloc(10*sizeof(float));
         ^
  211. 	}
  212. 	for(i=0;i<10;i++)

#8
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:256: error: Dead Store
  The value written to &doubleptr (type char**) is never used.
  254. 		char **doubleptr;
  255. 	    fptr = (char ** (*)(void))func_pointer_006_func_002;
  256. 	    doubleptr = fptr();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
            ^
  257. 	    doubleptr = (char **)func_pointer_006_func_003();
  258. 	    for(i=0;i<10;i++)

#9
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:265: error: Dead Store
  The value written to &doubleptr (type char**) is never used.
  263. 		    }
  264. 	    }
  265. 	    doubleptr = (char **)func_pointer_006_func_004();
            ^
  266. 	}
  267. }

#10
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:285: error: Dead Store
  The value written to &a (type char**) is never used.
  283. 	char ** a = NULL;
  284. 	fptr = (char ** (*)(char []))func_pointer_007_func_001;
  285. 	a =fptr(buf);/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
        ^
  286. }
  287. 

#11
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:330: error: Dead Store
  The value written to &flag (type int) is never used.
  328. func_pointer_009_u_001 * func_pointer_009_func_001 (void)
  329. {
  330. 	int flag = rand();
        ^
  331. 	flag = 1;
  332. 	func_pointer_009_u_001 *u;

#12
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:338: error: Null Dereference
  pointer `u` last assigned on line 337 could be null and is dereferenced at line 338, column 4.
  336. 		{
  337. 			u = (func_pointer_009_u_001 *)calloc(1,sizeof(func_pointer_009_u_001));
  338. 			u->a = 40;
          ^
  339. 			return u;
  340. 		}

#13
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:353: error: Dead Store
  The value written to &ret (type int) is never used.
  351. 	fptr = (func_pointer_009_u_001 (*)(void))func_pointer_009_func_001;
  352. 	*p = fptr();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
  353. 	ret = p->b;
        ^
  354. 	free(p);
  355. 	p= NULL;

#14
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:353: error: Null Dereference
  pointer `p` last assigned on line 349 could be null and is dereferenced at line 353, column 8.
  351. 	fptr = (func_pointer_009_u_001 (*)(void))func_pointer_009_func_001;
  352. 	*p = fptr();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
  353. 	ret = p->b;
              ^
  354. 	free(p);
  355. 	p= NULL;

#15
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:365: error: Dead Store
  The value written to &a (type int) is never used.
  363. {
  364. 	int a;
  365. 	a= 10;
        ^
  366. }
  367. 

#16
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:375: error: Dead Store
  The value written to &ret (type int) is never used.
  373. 	func = (int (*)(void))func_pointer_004_func_001;
  374. 	func1 = func;
  375. 	ret = func1();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
        ^
  376. }
  377. 

#17
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:395: error: Null Dereference
  pointer `str_rev` last assigned on line 392 could be null and is dereferenced at line 395, column 13.
  393.         for (j = 0; j < i; j++)
  394.         {
  395.             str_rev[j] = str1[j];
                   ^
  396.         }
  397.         str_rev[j] = '\0';

#18
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:397: error: Null Dereference
  pointer `str_rev` last assigned on line 392 could be null and is dereferenced at line 397, column 9.
  395.             str_rev[j] = str1[j];
  396.         }
  397.         str_rev[j] = '\0';
               ^
  398.         return str_rev;
  399.     }

#19
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:443: error: Buffer Overrun L2
  Offset: [0, 6] (â‡ [0, 3] + [0, 3]) Size: 1.
  441. 		for ( j=0 ;j<4; j++)
  442. 		{
  443. 			*(p[i]+j) += *(p[i]+j);
          ^
  444. 		}
  445. 	}

#20
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:438: error: Null Dereference
  pointer `p` last assigned on line 437 could be null and is dereferenced by call to `memcpy()` at line 438, column 2.
  436. 	int i,j;
  437. 	p= (int (*)[]) malloc (sizeof arr);
  438. 	memcpy(p, arr, sizeof(arr));
        ^
  439. 	for (i = 0;i< 4; i++)
  440. 	{

#21
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:498: error: Dead Store
  The value written to &flag (type int) is never used.
  496.     int (*func_gbl)(int);
  497.     func_gbl = (int (*)(int))func_pointer_013_func_002;
  498.     flag = func_gbl(1);
           ^
  499. }
  500. 

#22
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:538: error: Dead Store
  The value written to &f (type float) is never used.
  536.  	{
  537.         float f;
  538.     	f = func_gbl();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
            ^
  539.   	}
  540. 	return ret;

#23
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:548: error: Dead Store
  The value written to &flag (type int) is never used.
  546.     int (*fptr)(int);
  547.     fptr = func_pointer_014_func_002;
  548.     flag = fptr(1);
           ^
  549. }
  550. 

#24
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:592: error: Dead Store
  The value written to &st (type func_pointer_015_s_001*) is never used.
  590. 	{
  591. 		fptr_gbl = (func_pointer_015_s_001 *(*)(func_pointer_015_s_001* ))func_pointer_015_func_003;
  592. 		st = fptr_gbl( st1);/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
         ^
  593. 	}
  594. }

#25
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/func_pointer.c:601: error: Null Dereference
  pointer `st1` last assigned on line 600 could be null and is dereferenced by call to `memset()` at line 601, column 5.
  599. 	st.a = 10;
  600. 	st1 = (func_pointer_015_s_001 *)malloc(1*sizeof(func_pointer_015_s_001));
  601.     memset(st1, 0, sizeof(*st1));
           ^
  602. 
  603. 	func_pointer_015_func_001(st1);

Found 26 issues
            Issue Type(ISSUED_TYPE_ID): #
                Dead Store(DEAD_STORE): 15
    Null Dereference(NULL_DEREFERENCE): 10
  Buffer Overrun L2(BUFFER_OVERRUN_L2): 1
